# alertas-sisaire

./: .env.example  .gitignore  Makefile  R funcional 3,4  R. funcional 3,3  README.md  clase.py  docker-compose.yml  main.py  modulo.py  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/src/air_quality_alerts/: __main__.py  cli.py  config.py  storage.py
backend/src/air_quality_alerts/api/: main.py
backend/src/air_quality_alerts/domain/: __init__.py  engine.py
backend/src/air_quality_alerts/ingestion/: playwright_downloader.py
backend/tests/: test_air_quality_engine.py
data/catalog/: stations_sisaire_car.csv
data/samples/: ejemplo_pm25_bogota.csv  reporte_sisaire_pm25.csv  reporte_sisaire_pm25_horario.csv
docs/: architecture.md  data_contract.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: stations_sisaire_car.geojson
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: BogotaMap.jsx  Modal.jsx  ProcessPanel.jsx  SessionHistory.jsx  StationTable.jsx  StatusBadge.jsx
frontend/src/pages/: Landing.jsx  MapDashboard.jsx
frontend/src/services/: api.js
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: deploy_frontend_s3.sh  push_backend_ecr.sh
src/: main.py
src/engine/: calculate.py
src/ingestion/: ingestion.py
src/utils/: configs.py
